<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditState"
    android:fitsSystemWindows="true"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/brutaltype_extrabold"
        android:gravity="center"
        android:text="Editar dados do Alaska"
        android:textAllCaps="true"
        android:textColor="#293845"
        android:textSize="17sp" />

    <LinearLayout
        android:id="@+id/layoutID"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/idTitle"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/brutaltype"
            android:gravity="center_vertical|left|start"
            android:layout_marginLeft="20dp"
            android:text="@string/id"
            android:textColor="#293845"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/textEditID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/custom_text_input"
            android:closeIcon="@null"
            android:hint="hint"
            android:paddingLeft="10dp"
            app:boxBackgroundMode="none" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutState"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/stateTitle"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/brutaltype"
            android:gravity="center_vertical|left|start"
            android:layout_marginLeft="20dp"
            android:text="@string/estado"
            android:textColor="#293845"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/textEditState"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/custom_text_input"
            android:closeIcon="@null"
            android:hint="hint"
            android:paddingLeft="10dp"
            app:boxBackgroundMode="none" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutYear"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/yearTitle"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/brutaltype"
            android:gravity="center_vertical|left|start"
            android:text="@string/ano"
            android:textColor="#293845"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/textEditYear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/custom_text_input"
            android:closeIcon="@null"
            android:hint="hint"
            android:paddingLeft="10dp"
            app:boxBackgroundMode="none" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutPop"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/yearPop"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/brutaltype"
            android:gravity="center_vertical|left|start"
            android:text="@string/popula_o"
            android:textColor="#293845"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/textEditPop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/custom_text_input"
            android:closeIcon="@null"
            android:hint="hint"
            android:paddingLeft="10dp"
            app:boxBackgroundMode="none" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSlug"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/yearSlug"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/brutaltype"
            android:gravity="center_vertical|left|start"
            android:text="@string/slug"
            android:textColor="#293845"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/textEditSlug"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/custom_text_input"
            android:closeIcon="@null"
            android:hint="hint"
            android:paddingLeft="10dp"
            app:boxBackgroundMode="none" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:textAllCaps="false"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"/>

</LinearLayout>